2006-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c: save files using
	g_ascii_formatd() (fixes bug #360095).

2006-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.[ch]
	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/icosave.[ch]
	* plug-ins/winicon/main.[ch]: applied patch from Aurimas Juška
	with code cleanup and fixes for bug #346016 and other issues
	(see bug #352899).

2006-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/*.scm: applied patch from Saul Goode
	with review and localisation of Script-Fu procedure blurbs
	(bug #351283).

2006-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.c: reverted change for bug #356901.

	* plug-ins/script-fu/scripts/test-sphere.scm: removed superfluous
	comment.

2006-10-04  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpui.override: new style constructors for
	GimpColorButton and GimpColorScale.

2006-10-04  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushgenerated-load.c
	* app/core/gimpgradient-load.c
	* app/core/gimppalette-load.c
	* app/core/gimppalette-save.c: read and write all files in binary
	mode. Improved parser error messages (added line numbers). Minor
	changes to simply read DOS files instead of barfing on them.

2006-10-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c: unset scroll-lock (bug #359548).

2006-10-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c: minor code cleanup.

2006-10-03  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c: a FALSE return from
	gimp_drawable_mask_bounds() doesn't mean failure. Restore old
	behavior. Fixes bug #357223.

2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/offset-dialog.c:  apply patch from David
	Gowers, with minor cleanups, to use item dimensions rather
	than image dimensions; fixes bug #358322.
	